--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vaadin/vaadin-time-picker": "20.0.1",
     "@vaadin/vaadin-upload": "20.0.1",
     "construct-style-sheets-polyfill": "2.4.16",
+    "leaflet": "^1.7.1",
     "line-awesome": "1.3.0",
     "lit-element": "2.5.1",
     "lit-html": "1.4.1",
@@ -58,6 +59,7 @@
     "mobx": "^6.1.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.4",
     "@types/validator": "13.1.0",
     "@vaadin/application-theme-plugin": "./target/plugins/application-theme-plugin",
     "@vaadin/stats-plugin": "./target/plugins/stats-plugin",
@@ -162,6 +164,6 @@
       "workbox-precaching": "6.1.0",
       "workbox-webpack-plugin": "6.1.0"
     },
-    "hash": "af4939f4c9927a6dabcb76d1f621dd841e3c834f521fad76d589db46fd68829a"
+    "hash": "32875b2e72cb7a6b92de1e31d475399686543463d805ad8e6aae4bfe983dd1ad"
   }
 }
